updating the ignore list, and adding composer dev dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# Folders
+vendor/
+build
+# keep the config files in the build folder
+!build/*.xml
+
+# Files
 composer.phar
 composer.lock
-vendor/
-
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+cache.properties
+.DS_Store
