--- a/src/bower.json
+++ b/src/bower.json
@@ -23,6 +23,7 @@
     "tests"
   ],
   "dependencies": {
-    "font-awesome": "fontawesome#~4.4.0"
+    "font-awesome": "fontawesome#~4.4.0",
+    "bootstrap": "~3.3.5"
   }
 }
